# orcestra-downloader

./: CHANGELOG.md  README.md  mkdocs.yaml  pixi.toml  pyproject.toml
.github/workflows/: main.yaml
config/: .pypackage-builder-answers.yml  coverage.toml  hatch.toml  mypy.ini  pytest.ini  releaserc.toml  ruff.toml
dev/: 404.html  index.html  search.html
dev/CHANGELOG/: index.html
dev/about/: index.html
dev/search/: search_index.json
docs/: index.md
sandbox/: readii_ds.py
src/orcestradownloader/: __init__.py  cache.py  dataset_config.py  logging_config.py  main.py  managers.py
src/orcestradownloader/cli/: __init__.py  __main__.py  cli.py
src/orcestradownloader/models/: clinical_icb.py  common.py  pset.py  radioset.py  toxicoset.py  xevaset.py
tapes/: orcestra-downloader.tape
tests/: test_cache.py  test_say_hello.py
